--- a/META.yml
+++ b/META.yml
@@ -4,7 +4,10 @@ author:
   - 'Adam Kennedy <adamk@cpan.org>'
 build_requires:
   ExtUtils::MakeMaker: 6.42
+  File::Spec: 0.80
+  IPC::Run3: 0.042
   Test::More: 0.42
+  Test::NoWarnings: 0.084
 configure_requires:
   ExtUtils::MakeMaker: 6.42
 distribution_type: module
@@ -28,4 +31,4 @@ resources:
   ChangeLog: http://fisheye2.atlassian.com/changelog/cpan/trunk/Aspect-Library-Profiler
   license: http://dev.perl.org/licenses/
   repository: http://svn.ali.as/cpan/trunk/Aspect-Library-Profiler
-version: 0.32
+version: 0.33
